--- a/css/style.css
+++ b/css/style.css
@@ -43,11 +43,19 @@ header {
 }
 #mainGrid{
     margin: 0px 5%;
+    padding-left: 15%;
     display: grid;
     height: 66%;
-    width: 88%;
+    width: 66%;
     grid-template-rows: 225px 225px;
     grid-template-columns: 1fr 1fr 1fr;
+    align-items: center;
+    
+
+}
+.mainGridArea{
+    text-wrap: wrap;
+    
 }
 #buttons{
     cursor: pointer;
@@ -63,9 +71,11 @@ header {
     margin: 10px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    height: 66%;
-    width: 88%;
-    padding: 5%;
+    height: 88%;
+    width: 66%;
+    padding-left: 20%;
+ justify-content: center;
+    
 }
 footer{
     height: 125px;
@@ -78,15 +88,17 @@ footer{
         align-items: center;
         justify-content: space-evenly;
     }
-  .footer-element{
+  .footer-element1{
         display: flex;
         justify-content: space-evenly;
         align-items: center;
         flex-direction: row;
+        cursor: pointer;
     }
     .footer-element3{
         display: flex;
         justify-content: flex-end;
+        align-items: center;
         
     }
     p7{
@@ -94,3 +106,28 @@ footer{
         display: flex;
         align-items: center;
     }
+
+    @media only screen and (max-width: 600px) {
+        .navigation{
+            display: none;
+        }
+        #mainGrid{
+            grid-template-rows: 225px 225px 225px 225px 225px 225px;
+            grid-template-columns: 1fr;
+        }
+        #reviewGrid{
+            grid-template-rows: 117.26px 117.26px 117.26px;
+            grid-template-columns: 1fr;
+        }
+        footer{
+            background-color: #ecece4;
+        }
+        .block-element2{
+            display: inline-block;
+        }
+        p7{
+           color: black; 
+        }
+
+    }
+    
